--- a/estilos_periodico.css
+++ b/estilos_periodico.css
@@ -4,6 +4,24 @@ body {
     font-family: 'Poppins';
 }
 
+h1 {
+    text-align: center;
+}
+
+h2 {
+    font-weight: bold;
+    text-align: center;
+}
+
+img {
+    border-radius: 3%;
+}
+
+.cuerpo-noticia {
+    font-size: 14px;
+    color: #888;
+}
+
 .contenido-index {
     max-width: 1320px;
     margin: auto;
@@ -15,9 +33,59 @@ body {
     gap: 3em;
 }
 
-h2 {
-    font-weight: bold;
-    text-align: center;
+header {
+    height: 80px;
+    border-bottom: 2px solid lightgray;
+    padding-bottom: 0.5em;
+}
+
+
+
+.barra-navegacion {
+    max-width: 1320px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.barra-busqueda {
+    border: 2px solid lightgray;
+    border-radius: 50px;
+    padding: 1em;
+    width: 60%;
+    height: 20%;
+}
+
+.entrada-barra-busqeda {
+    border-color: transparent;
+    width: auto;
+}
+
+.menu {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 1em;
+
+}
+
+.logos {
+    width: 1em;
+    height: auto;
+    border-radius: 40%;
+    padding: 1em;
+}
+
+.icono-busqueda {
+    opacity: 50%;
+    width: 1em;
+    height: auto;
+}
+
+
+
+.menu-burger {
+    padding-top: 0.5em;
+    margin-left: auto;
 }
 
 .imagen-noticia-trending {
@@ -36,7 +104,7 @@ h2 {
 }
 
 .posicion {
-    color: grey;
+    color: #888;
 }
 
 .imagen-autor {
@@ -49,7 +117,7 @@ h2 {
 }
 
 .fecha {
-    color: grey;
+    color: #888;
 }
 
 .noticias {
@@ -59,14 +127,14 @@ h2 {
     margin-top: 3em;
 }
 
+.articulo-noticia {
+    /*height: 180px;*/
+}
+
 .imagen-noticia {
     width: 100%;
     height: auto;
 
-}
-
-img {
-    border-radius: 3%;
 }
 
 .imagen-publicacion-popular {
@@ -78,9 +146,9 @@ img {
     background-color: #f8f9fa;
 }
 
-.most-popular{
-        font-weight: bold;
-        padding-top: 2em;
+.most-popular {
+    font-weight: bold;
+    padding-top: 2em;
 }
 
 .contenido-subscripcion {
@@ -112,59 +180,10 @@ img {
     font-weight: bold;
 }
 
-nav {
-    border-bottom: 2px solid lightgray;
-    padding-bottom: 1em;
-
-}
-
-.barra-navegacion {
-    max-width: 1320px;
-    margin: auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-}
-
-.barra-busqueda {
-    border: 2px solid lightgray;
-    border-radius: 50px;
-    padding: 1em;
-    width: 60%;
-    height: 20%;
-}
-
-.menu {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 1em;
-    
-}
-
-.logos {
-    width: 1em;
-    height: auto;
-    border-radius: 40%;
-    padding: 1em;
-}
-
-.menu-burger {
-    padding-top: 0.5em;
-    margin-left: auto;
-}
-
-h1 {
-    text-align: center;
-}
-
-.entrada-barra-busqeda {
-    border-color: transparent;
-    width: auto;
-}
-
-.icono-busqueda {
-    opacity: 50%;
-    width: 1em;
-    height: auto;
+footer {
+    height: 380px;
+    margin-top: 70px;
+    margin-bottom: 70px;
 }
 
 .redes-sociales {
@@ -179,16 +198,30 @@ h1 {
 .logo-redes {
     width: 60%;
     height: auto;
-    background-color: gray;
+    background-color: #888;
     border-radius: 40%;
     padding: 1em;
 
 }
 
+
 /* responsive */
 
-@media only screen and (max-width: 480px){
- 
+@media only screen and (max-width: 480px) {
+
+
+
+    h2 {
+        font-size: 40px;
+        font-weight: 700;
+    }
+
+    h3 {
+        font-size: 18px;
+        font-weight: 700px;
+        color: #222;
+    }
+
     .noticias {
         grid-template-columns: repeat(1, 1fr);
     }
@@ -201,5 +234,93 @@ h1 {
     .grid-container-trending {
         display: block;
         gap: 3em;
+    }
+
+    header {
+        border-bottom: 2px solid lightgray;
+        padding-bottom: 0.5em;
+        height: auto;
+    }
+
+
+
+    .barra-navegacion {
+        margin: auto;
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+
+    .barra-busqueda:nth-child(1) {
+        order: 3;
+    }
+
+    .barra-busqueda {
+        border: 2px solid lightgray;
+        border-radius: 50px;
+        padding: 1em;
+        width: 90%;
+        height: 20%;
+
+        
+    }
+
+    .titulo-pagina:nth-child(2) {
+        order: 1;
+    }
+
+    .titulo-pagina {
+        
+    }
+
+    .menu:nth-child(3) {
+        order: 2;
+    }
+
+    .menu {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        padding: 1em;
+
+        
+    }
+
+    .redes-sociales-nav{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr ;
+    }
+
+
+
+    .entrada-barra-busqeda {
+        border-color: transparent;
+        width: 60%;
+    }
+    
+    .logos {
+        width: 1em;
+        height: auto;
+        border-radius: 40%;
+        padding: 1em;
+    }
+
+    .icono-busqueda {
+        opacity: 50%;
+        width: 1em;
+        height: auto;
+    }
+
+    .menu-burger {
+        padding-top: 0.5em;
+        margin-left: auto;
+    }
+
+
+    .redes-sociales {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        width: 20%;
+        gap: 2em;
+        margin: 10%;
+    
     }
 }
